--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -167,4 +167,8 @@ body {
     --fz-title: 32px;
     --fz-subtitle: 20px;
   }
+
+  .container {
+    --padding: 0.5rem;
+  }
 }
